@@ -1,3 +1,11 @@
+2009-06-29  Miguel de Dios  <miguel.dedios@artica.es>
+
+	* reporting/pChart/pData.class: fix lost var ($url) in
+	function grafico_eventos_grupo and at constants.
+	* reporting/fgraph.php: fix, it's assumed that the arrays was numerical
+	indexes.
+	Fixes: #2805807
+
 2009-06-25  Manuel Arostegui <marostegui@artica.es>
 
 	* pandora_console.spec: RPM spec file for 3.0 version.
